# pascal-compiler

./: .gitignore  CMakeLists.txt  ast.h  ast_dot_visualiser.h  ast_visitor.h  container_algo.h  debug.cpp  debug.h  id_generator.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  memory.cpp  memory.h  optional_formatter.h  parser.cpp  parser.h  result.h  semantic_analyser.cc  semantic_analyser.h  stack_frame.h  stringstream_formatter.h  symbol_table.cpp  symbol_table.h  token.h  variant_cast.h  variant_match.h  variant_ostream.h
